# indexing-csr

./: .gitignore  CMakeLists.txt  CallGraph.cpp  CallGraph.h  CallSite.cpp  CallSite.h  DWGraph.cpp  DWGraph.h  DWGraphUtil.cpp  DataComp.h  Function.cpp  Function.h  FunctionCloning.cpp  FunctionCloning.h  Grail.cpp  Graph.cpp  Graph.h  GraphUtil.cpp  GraphUtil.h  IndexingGraph.cpp  IndexingGraph.h  PathTree.cpp  PathtreeQuery.h  Query.h  README.md  ReachBackbone.cpp  ReachBackbone.h  Tabulation.cpp  Tabulation.h  TransitiveReduction.cpp  TransitiveReduction.h  Utils.cpp  Utils.h  VFG.cpp  VFG.h  bit_vector.h  cfl_indexing.cbp  cs_indexing.cbp  dag_main.cpp  dag_test_main.cpp  (+7 more)
Data/cs_artifact/bzip2/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  (+75 more)
Data/cs_artifact/crafty/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+118 more)
Data/cs_artifact/eon/: 0.txt  1.txt  10.txt  100.txt  1000.txt  1001.txt  1002.txt  1003.txt  1004.txt  1005.txt  1006.txt  1007.txt  1008.txt  1009.txt  101.txt  1010.txt  1011.txt  1012.txt  1013.txt  1014.txt  1015.txt  1016.txt  1017.txt  1018.txt  1019.txt  102.txt  1020.txt  1021.txt  1022.txt  1023.txt  1024.txt  1025.txt  1026.txt  1027.txt  1028.txt  1029.txt  103.txt  1030.txt  1031.txt  1032.txt  (+3394 more)
Data/cs_artifact/gap/: 0.txt  1.txt  10.txt  100.txt  1000.txt  1001.txt  1002.txt  1003.txt  1004.txt  1005.txt  1006.txt  1007.txt  1008.txt  1009.txt  101.txt  1010.txt  1011.txt  1012.txt  1013.txt  1014.txt  1015.txt  1016.txt  1017.txt  1018.txt  1019.txt  102.txt  1020.txt  (+1057 more)
(+8419 files in other folders)
